--- a/project/frontend-app/package.json
+++ b/project/frontend-app/package.json
@@ -35,6 +35,7 @@
     "react-native-reanimated": "3.10.0",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
+    "react-native-snap-carousel": "^4.0.0-beta.6",
     "react-native-web": "~0.19.10"
   },
   "devDependencies": {
