--- a/project/frontend-app/package.json
+++ b/project/frontend-app/package.json
@@ -19,8 +19,10 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "expo": "~51.0.0",
+    "expo-camera": "^15.0.9",
     "expo-constants": "~16.0.1",
     "expo-font": "~12.0.4",
+    "expo-image-picker": "^15.0.5",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.10",
     "expo-splash-screen": "~0.27.4",
