--- a/project/server/data/config.env
+++ b/project/server/data/config.env
@@ -1,2 +1,3 @@
 PORT=5000
 NODE_ENV=config
+MONGO_URI=mongodb+srv://levutoanhien2703:27031998Th@cluster0.z1hemfk.mongodb.net/?retryWrites=true&appName=Cluster0
