--- a/project/server/package.json
+++ b/project/server/package.json
@@ -6,8 +6,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "set NODE_ENV=development&& nodemon server.js",
-    "start": "set NODE_ENV=production&& node server.js"
+    "dev": "set NODE_ENV=Development&& nodemon server.js",
+    "start": "set NODE_ENV=Production&& node server.js"
   },
   "author": "",
   "license": "ISC",
