Image Upload API

--- a/project/server/data/config.env
+++ b/project/server/data/config.env
@@ -2,3 +2,6 @@ PORT=5001
 NODE_ENV=config
 MONGO_URI=mongodb+srv://levutoanhien2703:27031998Th@cluster0.z1hemfk.mongodb.net/?retryWrites=true&appName=Cluster0
 JWT_SECRET=adhowiahowidho
+CLOUDINARY_NAME=dn7pcqvko
+CLOUDINARY_API_KEY=484838798959486
+CLOUDINARY_API_SECRET=tYFPx8-q3dHHdlJkkh8FE8fh7fw
