--- a/project/server/data/config.env
+++ b/project/server/data/config.env
@@ -5,3 +5,7 @@ JWT_SECRET=adhowiahowidho
 CLOUDINARY_NAME=dn7pcqvko
 CLOUDINARY_API_KEY=484838798959486
 CLOUDINARY_API_SECRET=tYFPx8-q3dHHdlJkkh8FE8fh7fw
+SMTP_HOST="sandbox.smtp.mailtrap.io"
+SMTP_PORT=2525
+SMTP_USER="7021a2ad132079"
+SMTP_PASS="8fd77e621c299d"
