--- a/project/server/package.json
+++ b/project/server/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^8.5.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.14",
+    "stripe": "^16.5.0",
     "validator": "^13.12.0"
   }
 }
