--- a/project/frontend-app/package.json
+++ b/project/frontend-app/package.json
@@ -18,6 +18,8 @@
     "@expo/vector-icons": "^14.0.0",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
+    "@reduxjs/toolkit": "^2.2.7",
+    "axios": "^1.7.3",
     "expo": "~51.0.0",
     "expo-camera": "^15.0.9",
     "expo-constants": "~16.0.1",
@@ -29,7 +31,7 @@
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.4",
     "expo-web-browser": "~13.0.3",
-    "mime": "^4.0.3",
+    "mime": "^4.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.1",
@@ -42,7 +44,8 @@
     "react-native-snap-carousel": "^4.0.0-beta.6",
     "react-native-svg": "^15.3.0",
     "react-native-toast-message": "^2.2.0",
-    "react-native-web": "~0.19.10"
+    "react-native-web": "~0.19.10",
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
