--- a/project/frontend-app/package.json
+++ b/project/frontend-app/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@reduxjs/toolkit": "^2.2.7",
+    "@stripe/stripe-react-native": "^0.38.4",
     "axios": "^1.7.3",
     "expo": "~51.0.0",
     "expo-camera": "^15.0.9",
